# Crab-Os

./: .nanocommit.conf.json  Cargo.toml  README.md
.cargo/: config
src/: asm.rs  gdt.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
src/models/: gdt.rs
tests/: basic_boot.rs  should_panic.rs
